--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <ul class="cards">
             <li class="cards__item">
-              <img class="cards__image" src="images/images_sprint-2/cards-attention.png" alt="картинка 2 вида внимания">
+              <img class="cards__image" src="images/images_sprint-2/cards-attention.png" alt="картинка 2 вида внимания" />
               <h3 class="cards__title">Два вида внимания</h3>
               <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" src="images/images_sprint-2/cards-recall.png" alt="картинка Вспоминайте">
+              <img class="cards__image" src="images/images_sprint-2/cards-recall.png" alt="картинка Вспоминайте" />
               <h3 class="cards__title">Recall</h3>
               <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" src="images/images_sprint-2/cards-interliving.png" alt="картинка Интерливинг">
+              <img class="cards__image" src="images/images_sprint-2/cards-interliving.png" alt="картинка Интерливинг" />
               <h3 class="cards__title">Интерливинг</h3>
               <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" src="images/images_sprint-2/cards-question.png" alt="картинка Вопросы">
+              <img class="cards__image" src="images/images_sprint-2/cards-question.png" alt="картинка Вопросы" />
               <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" src="images/images_sprint-2/cards-competence.png" alt="картинка Иллюзия компетентности">
+              <img class="cards__image" src="images/images_sprint-2/cards-competence.png" alt="картинка Иллюзия компетентности" />
               <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
             </li>
@@ -64,8 +64,8 @@
           <h2 class="section-title">Видео нa TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
-              <iframe class="video__iframe" width="515" height="316" style="border: none" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
-              <iframe class="video__iframe" width="515" height="316" style="border: none" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
+            <iframe class="video__iframe" width="515" height="316" style="border: none;" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
+            <iframe class="video__iframe" width="515" height="316" style="border: none;" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
           </div>
         </section>
         <section class="oakley">
@@ -73,7 +73,9 @@
             <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
-                С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+                С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но
+                для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с
+                первого взгляда.
               </p>
             </div>
           </div>
@@ -128,11 +130,14 @@
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир — школа</h2>
-            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            <p class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
+              которые приносят успех в школе, карьере и жизни.
+            </p>
             <p class="khan__quote-author">Джордж Лукас</p>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
-              <img class="khan__book-pic" src="./images/images_sprint-2/khan-book.jpg" alt="обложка книги Салмана Хана">
+              <img class="khan__book-pic" src="./images/images_sprint-2/khan-book.jpg" alt="обложка книги Салмана Хана" />
               <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
             </div>
           </div>
@@ -188,10 +193,18 @@
           <h2 class="section-title">Полезные ресурсы</h2>
           <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
           <ul class="resources__logo-zone">
-            <li><a class="resources__logo" href="#"><img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="логотип Arzamas"></a></li>
-            <li><a class="resources__logo" href="#"><img src="./images/images_sprint-2/logo/resources-n1.svg" alt="логотип N+1"></a></li>
-            <li><a class="resources__logo" href="#"><img src="./images/images_sprint-2/logo/resources-strelka.svg" alt="логотип Strelka"></a></li>
-            <li><a class="resources__logo" href="#"><img src="./images/images_sprint-2/logo/resources-polka.svg" alt="логотип Полка"></a></li>
+            <li>
+              <a class="resources__logo" href="#"><img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="логотип Arzamas" /></a>
+            </li>
+            <li>
+              <a class="resources__logo" href="#"><img src="./images/images_sprint-2/logo/resources-n1.svg" alt="логотип N+1" /></a>
+            </li>
+            <li>
+              <a class="resources__logo" href="#"><img src="./images/images_sprint-2/logo/resources-strelka.svg" alt="логотип Strelka" /></a>
+            </li>
+            <li>
+              <a class="resources__logo" href="#"><img src="./images/images_sprint-2/logo/resources-polka.svg" alt="логотип Полка" /></a>
+            </li>
           </ul>
         </section>
       </main>
