--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <h2 class="section-title">Видео нa TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
-            <iframe class="video__iframe" width="515" height="316" style="border: none;" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
-            <iframe class="video__iframe" width="515" height="316" style="border: none;" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
           </div>
         </section>
         <section class="oakley">
@@ -130,10 +130,10 @@
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир — школа</h2>
-            <p class="khan__quote">
+            <blockquote class="khan__quote" cite="">
               Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
               которые приносят успех в школе, карьере и жизни.
-            </p>
+            </blockquote>
             <p class="khan__quote-author">Джордж Лукас</p>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
@@ -218,9 +218,9 @@
             <h2 class="footer__column-heading">О Практикуме</h2>
             <nav>
               <ul class="footer__column-links">
-                <li><a class="footer__column-link" href="#">Главная</a></li>
-                <li><a class="footer__column-link" href="#">Концепция</a></li>
-                <li><a class="footer__column-link" href="#">Наставники</a></li>
+                <li><a target="_blank" class="footer__column-link" href="#">Главная</a></li>
+                <li><a target="_blank" class="footer__column-link" href="#">Концепция</a></li>
+                <li><a target="_blank" class="footer__column-link" href="#">Наставники</a></li>
               </ul>
             </nav>
           </div>
